Add some ErrorProne fixes