@@ -262,156 +262,6 @@ public class ArrayUtils {
     //-----------------------------------------------------------------------
 
     /**
-     * <p>Shallow clones an array returning a typecast result and handling
-     * <code>null</code>.</p>
-     * <p>
-     * <p>The objects in the array are not cloned, thus there is no special
-     * handling for multi-dimensional arrays.</p>
-     * <p>
-     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
-     *
-     * @param array the array to shallow clone, may be <code>null</code>
-     * @return the cloned array, <code>null</code> if <code>null</code> input
-     */
-    public static Object[] clone(Object[] array) {
-        if (array == null) {
-            return null;
-        }
-        return (Object[]) array.clone();
-    }
-
-    /**
-     * <p>Clones an array returning a typecast result and handling
-     * <code>null</code>.</p>
-     * <p>
-     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
-     *
-     * @param array the array to clone, may be <code>null</code>
-     * @return the cloned array, <code>null</code> if <code>null</code> input
-     */
-    public static long[] clone(long[] array) {
-        if (array == null) {
-            return null;
-        }
-        return (long[]) array.clone();
-    }
-
-    /**
-     * <p>Clones an array returning a typecast result and handling
-     * <code>null</code>.</p>
-     * <p>
-     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
-     *
-     * @param array the array to clone, may be <code>null</code>
-     * @return the cloned array, <code>null</code> if <code>null</code> input
-     */
-    public static int[] clone(int[] array) {
-        if (array == null) {
-            return null;
-        }
-        return (int[]) array.clone();
-    }
-
-    /**
-     * <p>Clones an array returning a typecast result and handling
-     * <code>null</code>.</p>
-     * <p>
-     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
-     *
-     * @param array the array to clone, may be <code>null</code>
-     * @return the cloned array, <code>null</code> if <code>null</code> input
-     */
-    public static short[] clone(short[] array) {
-        if (array == null) {
-            return null;
-        }
-        return (short[]) array.clone();
-    }
-
-    /**
-     * <p>Clones an array returning a typecast result and handling
-     * <code>null</code>.</p>
-     * <p>
-     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
-     *
-     * @param array the array to clone, may be <code>null</code>
-     * @return the cloned array, <code>null</code> if <code>null</code> input
-     */
-    public static char[] clone(char[] array) {
-        if (array == null) {
-            return null;
-        }
-        return (char[]) array.clone();
-    }
-
-    /**
-     * <p>Clones an array returning a typecast result and handling
-     * <code>null</code>.</p>
-     * <p>
-     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
-     *
-     * @param array the array to clone, may be <code>null</code>
-     * @return the cloned array, <code>null</code> if <code>null</code> input
-     */
-    public static byte[] clone(byte[] array) {
-        if (array == null) {
-            return null;
-        }
-        return (byte[]) array.clone();
-    }
-
-    /**
-     * <p>Clones an array returning a typecast result and handling
-     * <code>null</code>.</p>
-     * <p>
-     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
-     *
-     * @param array the array to clone, may be <code>null</code>
-     * @return the cloned array, <code>null</code> if <code>null</code> input
-     */
-    public static double[] clone(double[] array) {
-        if (array == null) {
-            return null;
-        }
-        return (double[]) array.clone();
-    }
-
-    /**
-     * <p>Clones an array returning a typecast result and handling
-     * <code>null</code>.</p>
-     * <p>
-     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
-     *
-     * @param array the array to clone, may be <code>null</code>
-     * @return the cloned array, <code>null</code> if <code>null</code> input
-     */
-    public static float[] clone(float[] array) {
-        if (array == null) {
-            return null;
-        }
-        return (float[]) array.clone();
-    }
-
-    /**
-     * <p>Clones an array returning a typecast result and handling
-     * <code>null</code>.</p>
-     * <p>
-     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
-     *
-     * @param array the array to clone, may be <code>null</code>
-     * @return the cloned array, <code>null</code> if <code>null</code> input
-     */
-    public static boolean[] clone(boolean[] array) {
-        if (array == null) {
-            return null;
-        }
-        return (boolean[]) array.clone();
-    }
-
-    // Subarrays
-    //-----------------------------------------------------------------------
-
-    /**
      * <p>Produces a new array containing the elements between
      * the start and end indices.</p>
      * <p>
@@ -770,7 +620,7 @@ public class ArrayUtils {
         return subarray;
     }
 
-    // Is same length
+    // Subarrays
     //-----------------------------------------------------------------------
 
     /**
@@ -937,34 +787,8 @@ public class ArrayUtils {
         return true;
     }
 
+    // Is same length
     //-----------------------------------------------------------------------
-
-    /**
-     * <p>Returns the length of the specified array.
-     * This method can deal with <code>Object</code> arrays and with primitive arrays.</p>
-     * <p>
-     * <p>If the input array is <code>null</code>, <code>0</code> is returned.</p>
-     * <p>
-     * <pre>
-     * ArrayUtils.getLength(null)            = 0
-     * ArrayUtils.getLength([])              = 0
-     * ArrayUtils.getLength([null])          = 1
-     * ArrayUtils.getLength([true, false])   = 2
-     * ArrayUtils.getLength([1, 2, 3])       = 3
-     * ArrayUtils.getLength(["a", "b", "c"]) = 3
-     * </pre>
-     *
-     * @param array the array to retrieve the length from, may be null
-     * @return The length of the array, or <code>0</code> if the array is <code>null</code>
-     * @throws IllegalArgumentException if the object arguement is not an array.
-     * @since 2.1
-     */
-    public static int getLength(Object array) {
-        if (array == null) {
-            return 0;
-        }
-        return Array.getLength(array);
-    }
 
     /**
      * <p>Checks whether two arrays are the same type taking into account
@@ -981,9 +805,6 @@ public class ArrayUtils {
         }
         return array1.getClass().getName().equals(array2.getClass().getName());
     }
-
-    // Reverse
-    //-----------------------------------------------------------------------
 
     /**
      * <p>Reverses the order of the given array.</p>
@@ -1171,6 +992,8 @@ public class ArrayUtils {
         }
     }
 
+    //-----------------------------------------------------------------------
+
     /**
      * <p>Reverses the order of the given array.</p>
      * <p>
@@ -1194,63 +1017,6 @@ public class ArrayUtils {
         }
     }
 
-    // IndexOf search
-    // ----------------------------------------------------------------------
-
-    // Object IndexOf
-    //-----------------------------------------------------------------------
-
-    /**
-     * <p>Finds the index of the given object in the array.</p>
-     * <p>
-     * <p>This method returns {@link #INDEX_NOT_FOUND} (<code>-1</code>) for a <code>null</code> input array.</p>
-     *
-     * @param array        the array to search through for the object, may be <code>null</code>
-     * @param objectToFind the object to find, may be <code>null</code>
-     * @return the index of the object within the array,
-     * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
-     */
-    public static int indexOf(Object[] array, Object objectToFind) {
-        return indexOf(array, objectToFind, 0);
-    }
-
-    /**
-     * <p>Finds the index of the given object in the array starting at the given index.</p>
-     * <p>
-     * <p>This method returns {@link #INDEX_NOT_FOUND} (<code>-1</code>) for a <code>null</code> input array.</p>
-     * <p>
-     * <p>A negative startIndex is treated as zero. A startIndex larger than the array
-     * length will return {@link #INDEX_NOT_FOUND} (<code>-1</code>).</p>
-     *
-     * @param array        the array to search through for the object, may be <code>null</code>
-     * @param objectToFind the object to find, may be <code>null</code>
-     * @param startIndex   the index to start searching at
-     * @return the index of the object within the array starting at the index,
-     * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
-     */
-    public static int indexOf(Object[] array, Object objectToFind, int startIndex) {
-        if (array == null) {
-            return INDEX_NOT_FOUND;
-        }
-        if (startIndex < 0) {
-            startIndex = 0;
-        }
-        if (objectToFind == null) {
-            for (int i = startIndex; i < array.length; i++) {
-                if (array[i] == null) {
-                    return i;
-                }
-            }
-        } else {
-            for (int i = startIndex; i < array.length; i++) {
-                if (objectToFind.equals(array[i])) {
-                    return i;
-                }
-            }
-        }
-        return INDEX_NOT_FOUND;
-    }
-
     /**
      * <p>Finds the last index of the given object within the array.</p>
      * <p>
@@ -1264,6 +1030,9 @@ public class ArrayUtils {
     public static int lastIndexOf(Object[] array, Object objectToFind) {
         return lastIndexOf(array, objectToFind, Integer.MAX_VALUE);
     }
+
+    // Reverse
+    //-----------------------------------------------------------------------
 
     /**
      * <p>Finds the last index of the given object in the array starting at the given index.</p>
@@ -1317,47 +1086,52 @@ public class ArrayUtils {
         return indexOf(array, objectToFind) != INDEX_NOT_FOUND;
     }
 
-    // long IndexOf
-    //-----------------------------------------------------------------------
-
     /**
-     * <p>Finds the index of the given value in the array.</p>
+     * <p>Finds the index of the given object in the array.</p>
      * <p>
      * <p>This method returns {@link #INDEX_NOT_FOUND} (<code>-1</code>) for a <code>null</code> input array.</p>
      *
-     * @param array       the array to search through for the object, may be <code>null</code>
-     * @param valueToFind the value to find
-     * @return the index of the value within the array,
+     * @param array        the array to search through for the object, may be <code>null</code>
+     * @param objectToFind the object to find, may be <code>null</code>
+     * @return the index of the object within the array,
      * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
      */
-    public static int indexOf(long[] array, long valueToFind) {
-        return indexOf(array, valueToFind, 0);
+    public static int indexOf(Object[] array, Object objectToFind) {
+        return indexOf(array, objectToFind, 0);
     }
 
     /**
-     * <p>Finds the index of the given value in the array starting at the given index.</p>
+     * <p>Finds the index of the given object in the array starting at the given index.</p>
      * <p>
      * <p>This method returns {@link #INDEX_NOT_FOUND} (<code>-1</code>) for a <code>null</code> input array.</p>
      * <p>
      * <p>A negative startIndex is treated as zero. A startIndex larger than the array
      * length will return {@link #INDEX_NOT_FOUND} (<code>-1</code>).</p>
      *
-     * @param array       the array to search through for the object, may be <code>null</code>
-     * @param valueToFind the value to find
-     * @param startIndex  the index to start searching at
-     * @return the index of the value within the array,
+     * @param array        the array to search through for the object, may be <code>null</code>
+     * @param objectToFind the object to find, may be <code>null</code>
+     * @param startIndex   the index to start searching at
+     * @return the index of the object within the array starting at the index,
      * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
      */
-    public static int indexOf(long[] array, long valueToFind, int startIndex) {
+    public static int indexOf(Object[] array, Object objectToFind, int startIndex) {
         if (array == null) {
             return INDEX_NOT_FOUND;
         }
         if (startIndex < 0) {
             startIndex = 0;
         }
-        for (int i = startIndex; i < array.length; i++) {
-            if (valueToFind == array[i]) {
-                return i;
+        if (objectToFind == null) {
+            for (int i = startIndex; i < array.length; i++) {
+                if (array[i] == null) {
+                    return i;
+                }
+            }
+        } else {
+            for (int i = startIndex; i < array.length; i++) {
+                if (objectToFind.equals(array[i])) {
+                    return i;
+                }
             }
         }
         return INDEX_NOT_FOUND;
@@ -1421,9 +1195,6 @@ public class ArrayUtils {
         return indexOf(array, valueToFind) != INDEX_NOT_FOUND;
     }
 
-    // int IndexOf
-    //-----------------------------------------------------------------------
-
     /**
      * <p>Finds the index of the given value in the array.</p>
      * <p>
@@ -1434,7 +1205,7 @@ public class ArrayUtils {
      * @return the index of the value within the array,
      * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
      */
-    public static int indexOf(int[] array, int valueToFind) {
+    public static int indexOf(long[] array, long valueToFind) {
         return indexOf(array, valueToFind, 0);
     }
 
@@ -1452,7 +1223,7 @@ public class ArrayUtils {
      * @return the index of the value within the array,
      * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
      */
-    public static int indexOf(int[] array, int valueToFind, int startIndex) {
+    public static int indexOf(long[] array, long valueToFind, int startIndex) {
         if (array == null) {
             return INDEX_NOT_FOUND;
         }
@@ -1466,6 +1237,12 @@ public class ArrayUtils {
         }
         return INDEX_NOT_FOUND;
     }
+
+    // IndexOf search
+    // ----------------------------------------------------------------------
+
+    // Object IndexOf
+    //-----------------------------------------------------------------------
 
     /**
      * <p>Finds the last index of the given value within the array.</p>
@@ -1525,9 +1302,6 @@ public class ArrayUtils {
         return indexOf(array, valueToFind) != INDEX_NOT_FOUND;
     }
 
-    // short IndexOf
-    //-----------------------------------------------------------------------
-
     /**
      * <p>Finds the index of the given value in the array.</p>
      * <p>
@@ -1538,7 +1312,7 @@ public class ArrayUtils {
      * @return the index of the value within the array,
      * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
      */
-    public static int indexOf(short[] array, short valueToFind) {
+    public static int indexOf(int[] array, int valueToFind) {
         return indexOf(array, valueToFind, 0);
     }
 
@@ -1556,7 +1330,7 @@ public class ArrayUtils {
      * @return the index of the value within the array,
      * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
      */
-    public static int indexOf(short[] array, short valueToFind, int startIndex) {
+    public static int indexOf(int[] array, int valueToFind, int startIndex) {
         if (array == null) {
             return INDEX_NOT_FOUND;
         }
@@ -1570,6 +1344,9 @@ public class ArrayUtils {
         }
         return INDEX_NOT_FOUND;
     }
+
+    // long IndexOf
+    //-----------------------------------------------------------------------
 
     /**
      * <p>Finds the last index of the given value within the array.</p>
@@ -1629,9 +1406,6 @@ public class ArrayUtils {
         return indexOf(array, valueToFind) != INDEX_NOT_FOUND;
     }
 
-    // char IndexOf
-    //-----------------------------------------------------------------------
-
     /**
      * <p>Finds the index of the given value in the array.</p>
      * <p>
@@ -1641,9 +1415,8 @@ public class ArrayUtils {
      * @param valueToFind the value to find
      * @return the index of the value within the array,
      * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
-     * @since 2.1
      */
-    public static int indexOf(char[] array, char valueToFind) {
+    public static int indexOf(short[] array, short valueToFind) {
         return indexOf(array, valueToFind, 0);
     }
 
@@ -1660,9 +1433,8 @@ public class ArrayUtils {
      * @param startIndex  the index to start searching at
      * @return the index of the value within the array,
      * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
-     * @since 2.1
      */
-    public static int indexOf(char[] array, char valueToFind, int startIndex) {
+    public static int indexOf(short[] array, short valueToFind, int startIndex) {
         if (array == null) {
             return INDEX_NOT_FOUND;
         }
@@ -1676,6 +1448,9 @@ public class ArrayUtils {
         }
         return INDEX_NOT_FOUND;
     }
+
+    // int IndexOf
+    //-----------------------------------------------------------------------
 
     /**
      * <p>Finds the last index of the given value within the array.</p>
@@ -1738,9 +1513,6 @@ public class ArrayUtils {
         return indexOf(array, valueToFind) != INDEX_NOT_FOUND;
     }
 
-    // byte IndexOf
-    //-----------------------------------------------------------------------
-
     /**
      * <p>Finds the index of the given value in the array.</p>
      * <p>
@@ -1750,8 +1522,9 @@ public class ArrayUtils {
      * @param valueToFind the value to find
      * @return the index of the value within the array,
      * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
+     * @since 2.1
      */
-    public static int indexOf(byte[] array, byte valueToFind) {
+    public static int indexOf(char[] array, char valueToFind) {
         return indexOf(array, valueToFind, 0);
     }
 
@@ -1768,8 +1541,9 @@ public class ArrayUtils {
      * @param startIndex  the index to start searching at
      * @return the index of the value within the array,
      * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
+     * @since 2.1
      */
-    public static int indexOf(byte[] array, byte valueToFind, int startIndex) {
+    public static int indexOf(char[] array, char valueToFind, int startIndex) {
         if (array == null) {
             return INDEX_NOT_FOUND;
         }
@@ -1783,6 +1557,9 @@ public class ArrayUtils {
         }
         return INDEX_NOT_FOUND;
     }
+
+    // short IndexOf
+    //-----------------------------------------------------------------------
 
     /**
      * <p>Finds the last index of the given value within the array.</p>
@@ -1842,9 +1619,6 @@ public class ArrayUtils {
         return indexOf(array, valueToFind) != INDEX_NOT_FOUND;
     }
 
-    // double IndexOf
-    //-----------------------------------------------------------------------
-
     /**
      * <p>Finds the index of the given value in the array.</p>
      * <p>
@@ -1855,25 +1629,8 @@ public class ArrayUtils {
      * @return the index of the value within the array,
      * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
      */
-    public static int indexOf(double[] array, double valueToFind) {
+    public static int indexOf(byte[] array, byte valueToFind) {
         return indexOf(array, valueToFind, 0);
-    }
-
-    /**
-     * <p>Finds the index of the given value within a given tolerance in the array.
-     * This method will return the index of the first value which falls between the region
-     * defined by valueToFind - tolerance and valueToFind + tolerance.</p>
-     * <p>
-     * <p>This method returns {@link #INDEX_NOT_FOUND} (<code>-1</code>) for a <code>null</code> input array.</p>
-     *
-     * @param array       the array to search through for the object, may be <code>null</code>
-     * @param valueToFind the value to find
-     * @param tolerance   tolerance of the search
-     * @return the index of the value within the array,
-     * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
-     */
-    public static int indexOf(double[] array, double valueToFind, double tolerance) {
-        return indexOf(array, valueToFind, 0, tolerance);
     }
 
     /**
@@ -1890,8 +1647,8 @@ public class ArrayUtils {
      * @return the index of the value within the array,
      * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
      */
-    public static int indexOf(double[] array, double valueToFind, int startIndex) {
-        if (ArrayUtils.isEmpty(array)) {
+    public static int indexOf(byte[] array, byte valueToFind, int startIndex) {
+        if (array == null) {
             return INDEX_NOT_FOUND;
         }
         if (startIndex < 0) {
@@ -1903,6 +1660,26 @@ public class ArrayUtils {
             }
         }
         return INDEX_NOT_FOUND;
+    }
+
+    // char IndexOf
+    //-----------------------------------------------------------------------
+
+    /**
+     * <p>Finds the index of the given value within a given tolerance in the array.
+     * This method will return the index of the first value which falls between the region
+     * defined by valueToFind - tolerance and valueToFind + tolerance.</p>
+     * <p>
+     * <p>This method returns {@link #INDEX_NOT_FOUND} (<code>-1</code>) for a <code>null</code> input array.</p>
+     *
+     * @param array       the array to search through for the object, may be <code>null</code>
+     * @param valueToFind the value to find
+     * @param tolerance   tolerance of the search
+     * @return the index of the value within the array,
+     * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
+     */
+    public static int indexOf(double[] array, double valueToFind, double tolerance) {
+        return indexOf(array, valueToFind, 0, tolerance);
     }
 
     /**
@@ -1940,6 +1717,20 @@ public class ArrayUtils {
     }
 
     /**
+     * <p>Checks if an array of primitive doubles is empty or <code>null</code>.</p>
+     *
+     * @param array the array to test
+     * @return <code>true</code> if the array is empty or <code>null</code>
+     * @since 2.1
+     */
+    public static boolean isEmpty(double[] array) {
+        if (array == null || array.length == 0) {
+            return true;
+        }
+        return false;
+    }
+
+    /**
      * <p>Finds the last index of the given value within the array.</p>
      * <p>
      * <p>This method returns {@link #INDEX_NOT_FOUND} (<code>-1</code>) for a <code>null</code> input array.</p>
@@ -1951,23 +1742,6 @@ public class ArrayUtils {
      */
     public static int lastIndexOf(double[] array, double valueToFind) {
         return lastIndexOf(array, valueToFind, Integer.MAX_VALUE);
-    }
-
-    /**
-     * <p>Finds the last index of the given value within a given tolerance in the array.
-     * This method will return the index of the last value which falls between the region
-     * defined by valueToFind - tolerance and valueToFind + tolerance.</p>
-     * <p>
-     * <p>This method returns {@link #INDEX_NOT_FOUND} (<code>-1</code>) for a <code>null</code> input array.</p>
-     *
-     * @param array       the array to search through for the object, may be <code>null</code>
-     * @param valueToFind the value to find
-     * @param tolerance   tolerance of the search
-     * @return the index of the value within the array,
-     * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
-     */
-    public static int lastIndexOf(double[] array, double valueToFind, double tolerance) {
-        return lastIndexOf(array, valueToFind, Integer.MAX_VALUE, tolerance);
     }
 
     /**
@@ -1999,6 +1773,26 @@ public class ArrayUtils {
             }
         }
         return INDEX_NOT_FOUND;
+    }
+
+    // byte IndexOf
+    //-----------------------------------------------------------------------
+
+    /**
+     * <p>Finds the last index of the given value within a given tolerance in the array.
+     * This method will return the index of the last value which falls between the region
+     * defined by valueToFind - tolerance and valueToFind + tolerance.</p>
+     * <p>
+     * <p>This method returns {@link #INDEX_NOT_FOUND} (<code>-1</code>) for a <code>null</code> input array.</p>
+     *
+     * @param array       the array to search through for the object, may be <code>null</code>
+     * @param valueToFind the value to find
+     * @param tolerance   tolerance of the search
+     * @return the index of the value within the array,
+     * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
+     */
+    public static int lastIndexOf(double[] array, double valueToFind, double tolerance) {
+        return lastIndexOf(array, valueToFind, Integer.MAX_VALUE, tolerance);
     }
 
     /**
@@ -2051,26 +1845,6 @@ public class ArrayUtils {
     }
 
     /**
-     * <p>Checks if a value falling within the given tolerance is in the
-     * given array.  If the array contains a value within the inclusive range
-     * defined by (value - tolerance) to (value + tolerance).</p>
-     * <p>
-     * <p>The method returns <code>false</code> if a <code>null</code> array
-     * is passed in.</p>
-     *
-     * @param array       the array to search
-     * @param valueToFind the value to find
-     * @param tolerance   the array contains the tolerance of the search
-     * @return true if value falling within tolerance is in array
-     */
-    public static boolean contains(double[] array, double valueToFind, double tolerance) {
-        return indexOf(array, valueToFind, 0, tolerance) != INDEX_NOT_FOUND;
-    }
-
-    // float IndexOf
-    //-----------------------------------------------------------------------
-
-    /**
      * <p>Finds the index of the given value in the array.</p>
      * <p>
      * <p>This method returns {@link #INDEX_NOT_FOUND} (<code>-1</code>) for a <code>null</code> input array.</p>
@@ -2080,7 +1854,7 @@ public class ArrayUtils {
      * @return the index of the value within the array,
      * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
      */
-    public static int indexOf(float[] array, float valueToFind) {
+    public static int indexOf(double[] array, double valueToFind) {
         return indexOf(array, valueToFind, 0);
     }
 
@@ -2098,7 +1872,7 @@ public class ArrayUtils {
      * @return the index of the value within the array,
      * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
      */
-    public static int indexOf(float[] array, float valueToFind, int startIndex) {
+    public static int indexOf(double[] array, double valueToFind, int startIndex) {
         if (ArrayUtils.isEmpty(array)) {
             return INDEX_NOT_FOUND;
         }
@@ -2111,6 +1885,26 @@ public class ArrayUtils {
             }
         }
         return INDEX_NOT_FOUND;
+    }
+
+    // double IndexOf
+    //-----------------------------------------------------------------------
+
+    /**
+     * <p>Checks if a value falling within the given tolerance is in the
+     * given array.  If the array contains a value within the inclusive range
+     * defined by (value - tolerance) to (value + tolerance).</p>
+     * <p>
+     * <p>The method returns <code>false</code> if a <code>null</code> array
+     * is passed in.</p>
+     *
+     * @param array       the array to search
+     * @param valueToFind the value to find
+     * @param tolerance   the array contains the tolerance of the search
+     * @return true if value falling within tolerance is in array
+     */
+    public static boolean contains(double[] array, double valueToFind, double tolerance) {
+        return indexOf(array, valueToFind, 0, tolerance) != INDEX_NOT_FOUND;
     }
 
     /**
@@ -2159,6 +1953,20 @@ public class ArrayUtils {
     }
 
     /**
+     * <p>Checks if an array of primitive floats is empty or <code>null</code>.</p>
+     *
+     * @param array the array to test
+     * @return <code>true</code> if the array is empty or <code>null</code>
+     * @since 2.1
+     */
+    public static boolean isEmpty(float[] array) {
+        if (array == null || array.length == 0) {
+            return true;
+        }
+        return false;
+    }
+
+    /**
      * <p>Checks if the value is in the given array.</p>
      * <p>
      * <p>The method returns <code>false</code> if a <code>null</code> array is passed in.</p>
@@ -2171,9 +1979,6 @@ public class ArrayUtils {
         return indexOf(array, valueToFind) != INDEX_NOT_FOUND;
     }
 
-    // boolean IndexOf
-    //-----------------------------------------------------------------------
-
     /**
      * <p>Finds the index of the given value in the array.</p>
      * <p>
@@ -2184,7 +1989,7 @@ public class ArrayUtils {
      * @return the index of the value within the array,
      * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
      */
-    public static int indexOf(boolean[] array, boolean valueToFind) {
+    public static int indexOf(float[] array, float valueToFind) {
         return indexOf(array, valueToFind, 0);
     }
 
@@ -2200,10 +2005,9 @@ public class ArrayUtils {
      * @param valueToFind the value to find
      * @param startIndex  the index to start searching at
      * @return the index of the value within the array,
-     * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code>
-     * array input
+     * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
      */
-    public static int indexOf(boolean[] array, boolean valueToFind, int startIndex) {
+    public static int indexOf(float[] array, float valueToFind, int startIndex) {
         if (ArrayUtils.isEmpty(array)) {
             return INDEX_NOT_FOUND;
         }
@@ -2265,6 +2069,23 @@ public class ArrayUtils {
     }
 
     /**
+     * <p>Checks if an array of primitive booleans is empty or <code>null</code>.</p>
+     *
+     * @param array the array to test
+     * @return <code>true</code> if the array is empty or <code>null</code>
+     * @since 2.1
+     */
+    public static boolean isEmpty(boolean[] array) {
+        if (array == null || array.length == 0) {
+            return true;
+        }
+        return false;
+    }
+
+    // float IndexOf
+    //-----------------------------------------------------------------------
+
+    /**
      * <p>Checks if the value is in the given array.</p>
      * <p>
      * <p>The method returns <code>false</code> if a <code>null</code> array is passed in.</p>
@@ -2277,11 +2098,49 @@ public class ArrayUtils {
         return indexOf(array, valueToFind) != INDEX_NOT_FOUND;
     }
 
-    // Primitive/Object array converters
-    // ----------------------------------------------------------------------
+    /**
+     * <p>Finds the index of the given value in the array.</p>
+     * <p>
+     * <p>This method returns {@link #INDEX_NOT_FOUND} (<code>-1</code>) for a <code>null</code> input array.</p>
+     *
+     * @param array       the array to search through for the object, may be <code>null</code>
+     * @param valueToFind the value to find
+     * @return the index of the value within the array,
+     * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code> array input
+     */
+    public static int indexOf(boolean[] array, boolean valueToFind) {
+        return indexOf(array, valueToFind, 0);
+    }
 
-    // Character array converters
-    // ----------------------------------------------------------------------
+    /**
+     * <p>Finds the index of the given value in the array starting at the given index.</p>
+     * <p>
+     * <p>This method returns {@link #INDEX_NOT_FOUND} (<code>-1</code>) for a <code>null</code> input array.</p>
+     * <p>
+     * <p>A negative startIndex is treated as zero. A startIndex larger than the array
+     * length will return {@link #INDEX_NOT_FOUND} (<code>-1</code>).</p>
+     *
+     * @param array       the array to search through for the object, may be <code>null</code>
+     * @param valueToFind the value to find
+     * @param startIndex  the index to start searching at
+     * @return the index of the value within the array,
+     * {@link #INDEX_NOT_FOUND} (<code>-1</code>) if not found or <code>null</code>
+     * array input
+     */
+    public static int indexOf(boolean[] array, boolean valueToFind, int startIndex) {
+        if (ArrayUtils.isEmpty(array)) {
+            return INDEX_NOT_FOUND;
+        }
+        if (startIndex < 0) {
+            startIndex = 0;
+        }
+        for (int i = startIndex; i < array.length; i++) {
+            if (valueToFind == array[i]) {
+                return i;
+            }
+        }
+        return INDEX_NOT_FOUND;
+    }
 
     /**
      * <p>Converts an array of object Characters to primitives.</p>
@@ -2328,6 +2187,9 @@ public class ArrayUtils {
         return result;
     }
 
+    // boolean IndexOf
+    //-----------------------------------------------------------------------
+
     /**
      * <p>Converts an array of primitive chars to objects.</p>
      * <p>
@@ -2344,13 +2206,10 @@ public class ArrayUtils {
         }
         final Character[] result = new Character[array.length];
         for (int i = 0; i < array.length; i++) {
-            result[i] = new Character(array[i]);
+            result[i] = array[i];
         }
         return result;
     }
-
-    // Long array converters
-    // ----------------------------------------------------------------------
 
     /**
      * <p>Converts an array of object Longs to primitives.</p>
@@ -2413,13 +2272,10 @@ public class ArrayUtils {
         }
         final Long[] result = new Long[array.length];
         for (int i = 0; i < array.length; i++) {
-            result[i] = new Long(array[i]);
+            result[i] = Long.valueOf(array[i]);
         }
         return result;
     }
-
-    // Int array converters
-    // ----------------------------------------------------------------------
 
     /**
      * <p>Converts an array of object Integers to primitives.</p>
@@ -2442,6 +2298,12 @@ public class ArrayUtils {
         }
         return result;
     }
+
+    // Primitive/Object array converters
+    // ----------------------------------------------------------------------
+
+    // Character array converters
+    // ----------------------------------------------------------------------
 
     /**
      * <p>Converts an array of object Integer to primitives handling <code>null</code>.</p>
@@ -2482,13 +2344,10 @@ public class ArrayUtils {
         }
         final Integer[] result = new Integer[array.length];
         for (int i = 0; i < array.length; i++) {
-            result[i] = new Integer(array[i]);
+            result[i] = Integer.valueOf(array[i]);
         }
         return result;
     }
-
-    // Short array converters
-    // ----------------------------------------------------------------------
 
     /**
      * <p>Converts an array of object Shorts to primitives.</p>
@@ -2511,6 +2370,9 @@ public class ArrayUtils {
         }
         return result;
     }
+
+    // Long array converters
+    // ----------------------------------------------------------------------
 
     /**
      * <p>Converts an array of object Short to primitives handling <code>null</code>.</p>
@@ -2551,13 +2413,10 @@ public class ArrayUtils {
         }
         final Short[] result = new Short[array.length];
         for (int i = 0; i < array.length; i++) {
-            result[i] = new Short(array[i]);
+            result[i] = array[i];
         }
         return result;
     }
-
-    // Byte array converters
-    // ----------------------------------------------------------------------
 
     /**
      * <p>Converts an array of object Bytes to primitives.</p>
@@ -2580,6 +2439,9 @@ public class ArrayUtils {
         }
         return result;
     }
+
+    // Int array converters
+    // ----------------------------------------------------------------------
 
     /**
      * <p>Converts an array of object Bytes to primitives handling <code>null</code>.</p>
@@ -2620,13 +2482,10 @@ public class ArrayUtils {
         }
         final Byte[] result = new Byte[array.length];
         for (int i = 0; i < array.length; i++) {
-            result[i] = new Byte(array[i]);
+            result[i] = Byte.valueOf(array[i]);
         }
         return result;
     }
-
-    // Double array converters
-    // ----------------------------------------------------------------------
 
     /**
      * <p>Converts an array of object Doubles to primitives.</p>
@@ -2649,6 +2508,9 @@ public class ArrayUtils {
         }
         return result;
     }
+
+    // Short array converters
+    // ----------------------------------------------------------------------
 
     /**
      * <p>Converts an array of object Doubles to primitives handling <code>null</code>.</p>
@@ -2689,13 +2551,10 @@ public class ArrayUtils {
         }
         final Double[] result = new Double[array.length];
         for (int i = 0; i < array.length; i++) {
-            result[i] = new Double(array[i]);
+            result[i] = Double.valueOf(array[i]);
         }
         return result;
     }
-
-    //   Float array converters
-    // ----------------------------------------------------------------------
 
     /**
      * <p>Converts an array of object Floats to primitives.</p>
@@ -2718,6 +2577,9 @@ public class ArrayUtils {
         }
         return result;
     }
+
+    // Byte array converters
+    // ----------------------------------------------------------------------
 
     /**
      * <p>Converts an array of object Floats to primitives handling <code>null</code>.</p>
@@ -2758,13 +2620,10 @@ public class ArrayUtils {
         }
         final Float[] result = new Float[array.length];
         for (int i = 0; i < array.length; i++) {
-            result[i] = new Float(array[i]);
+            result[i] = Float.valueOf(array[i]);
         }
         return result;
     }
-
-    // Boolean array converters
-    // ----------------------------------------------------------------------
 
     /**
      * <p>Converts an array of object Booleans to primitives.</p>
@@ -2787,6 +2646,9 @@ public class ArrayUtils {
         }
         return result;
     }
+
+    // Double array converters
+    // ----------------------------------------------------------------------
 
     /**
      * <p>Converts an array of object Booleans to primitives handling <code>null</code>.</p>
@@ -2832,8 +2694,6 @@ public class ArrayUtils {
         return result;
     }
 
-    // ----------------------------------------------------------------------
-
     /**
      * <p>Checks if an array of Objects is empty or <code>null</code>.</p>
      *
@@ -2847,6 +2707,9 @@ public class ArrayUtils {
         }
         return false;
     }
+
+    //   Float array converters
+    // ----------------------------------------------------------------------
 
     /**
      * <p>Checks if an array of primitive longs is empty or <code>null</code>.</p>
@@ -2890,6 +2753,9 @@ public class ArrayUtils {
         return false;
     }
 
+    // Boolean array converters
+    // ----------------------------------------------------------------------
+
     /**
      * <p>Checks if an array of primitive chars is empty or <code>null</code>.</p>
      *
@@ -2912,48 +2778,6 @@ public class ArrayUtils {
      * @since 2.1
      */
     public static boolean isEmpty(byte[] array) {
-        if (array == null || array.length == 0) {
-            return true;
-        }
-        return false;
-    }
-
-    /**
-     * <p>Checks if an array of primitive doubles is empty or <code>null</code>.</p>
-     *
-     * @param array the array to test
-     * @return <code>true</code> if the array is empty or <code>null</code>
-     * @since 2.1
-     */
-    public static boolean isEmpty(double[] array) {
-        if (array == null || array.length == 0) {
-            return true;
-        }
-        return false;
-    }
-
-    /**
-     * <p>Checks if an array of primitive floats is empty or <code>null</code>.</p>
-     *
-     * @param array the array to test
-     * @return <code>true</code> if the array is empty or <code>null</code>
-     * @since 2.1
-     */
-    public static boolean isEmpty(float[] array) {
-        if (array == null || array.length == 0) {
-            return true;
-        }
-        return false;
-    }
-
-    /**
-     * <p>Checks if an array of primitive booleans is empty or <code>null</code>.</p>
-     *
-     * @param array the array to test
-     * @return <code>true</code> if the array is empty or <code>null</code>
-     * @since 2.1
-     */
-    public static boolean isEmpty(boolean[] array) {
         if (array == null || array.length == 0) {
             return true;
         }
@@ -2994,6 +2818,27 @@ public class ArrayUtils {
         return joinedArray;
     }
 
+    // ----------------------------------------------------------------------
+
+    /**
+     * <p>Shallow clones an array returning a typecast result and handling
+     * <code>null</code>.</p>
+     * <p>
+     * <p>The objects in the array are not cloned, thus there is no special
+     * handling for multi-dimensional arrays.</p>
+     * <p>
+     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
+     *
+     * @param array the array to shallow clone, may be <code>null</code>
+     * @return the cloned array, <code>null</code> if <code>null</code> input
+     */
+    public static Object[] clone(Object[] array) {
+        if (array == null) {
+            return null;
+        }
+        return (Object[]) array.clone();
+    }
+
     /**
      * <p>Adds all the elements of the given arrays into a new array.</p>
      * <p>The new array contains all of the element of <code>array1</code> followed
@@ -3021,6 +2866,22 @@ public class ArrayUtils {
         System.arraycopy(array1, 0, joinedArray, 0, array1.length);
         System.arraycopy(array2, 0, joinedArray, array1.length, array2.length);
         return joinedArray;
+    }
+
+    /**
+     * <p>Clones an array returning a typecast result and handling
+     * <code>null</code>.</p>
+     * <p>
+     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
+     *
+     * @param array the array to clone, may be <code>null</code>
+     * @return the cloned array, <code>null</code> if <code>null</code> input
+     */
+    public static boolean[] clone(boolean[] array) {
+        if (array == null) {
+            return null;
+        }
+        return (boolean[]) array.clone();
     }
 
     /**
@@ -3053,6 +2914,22 @@ public class ArrayUtils {
     }
 
     /**
+     * <p>Clones an array returning a typecast result and handling
+     * <code>null</code>.</p>
+     * <p>
+     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
+     *
+     * @param array the array to clone, may be <code>null</code>
+     * @return the cloned array, <code>null</code> if <code>null</code> input
+     */
+    public static char[] clone(char[] array) {
+        if (array == null) {
+            return null;
+        }
+        return (char[]) array.clone();
+    }
+
+    /**
      * <p>Adds all the elements of the given arrays into a new array.</p>
      * <p>The new array contains all of the element of <code>array1</code> followed
      * by all of the elements <code>array2</code>. When an array is returned, it is always
@@ -3079,6 +2956,22 @@ public class ArrayUtils {
         System.arraycopy(array1, 0, joinedArray, 0, array1.length);
         System.arraycopy(array2, 0, joinedArray, array1.length, array2.length);
         return joinedArray;
+    }
+
+    /**
+     * <p>Clones an array returning a typecast result and handling
+     * <code>null</code>.</p>
+     * <p>
+     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
+     *
+     * @param array the array to clone, may be <code>null</code>
+     * @return the cloned array, <code>null</code> if <code>null</code> input
+     */
+    public static byte[] clone(byte[] array) {
+        if (array == null) {
+            return null;
+        }
+        return (byte[]) array.clone();
     }
 
     /**
@@ -3111,6 +3004,22 @@ public class ArrayUtils {
     }
 
     /**
+     * <p>Clones an array returning a typecast result and handling
+     * <code>null</code>.</p>
+     * <p>
+     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
+     *
+     * @param array the array to clone, may be <code>null</code>
+     * @return the cloned array, <code>null</code> if <code>null</code> input
+     */
+    public static short[] clone(short[] array) {
+        if (array == null) {
+            return null;
+        }
+        return (short[]) array.clone();
+    }
+
+    /**
      * <p>Adds all the elements of the given arrays into a new array.</p>
      * <p>The new array contains all of the element of <code>array1</code> followed
      * by all of the elements <code>array2</code>. When an array is returned, it is always
@@ -3137,6 +3046,22 @@ public class ArrayUtils {
         System.arraycopy(array1, 0, joinedArray, 0, array1.length);
         System.arraycopy(array2, 0, joinedArray, array1.length, array2.length);
         return joinedArray;
+    }
+
+    /**
+     * <p>Clones an array returning a typecast result and handling
+     * <code>null</code>.</p>
+     * <p>
+     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
+     *
+     * @param array the array to clone, may be <code>null</code>
+     * @return the cloned array, <code>null</code> if <code>null</code> input
+     */
+    public static int[] clone(int[] array) {
+        if (array == null) {
+            return null;
+        }
+        return (int[]) array.clone();
     }
 
     /**
@@ -3169,6 +3094,22 @@ public class ArrayUtils {
     }
 
     /**
+     * <p>Clones an array returning a typecast result and handling
+     * <code>null</code>.</p>
+     * <p>
+     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
+     *
+     * @param array the array to clone, may be <code>null</code>
+     * @return the cloned array, <code>null</code> if <code>null</code> input
+     */
+    public static long[] clone(long[] array) {
+        if (array == null) {
+            return null;
+        }
+        return (long[]) array.clone();
+    }
+
+    /**
      * <p>Adds all the elements of the given arrays into a new array.</p>
      * <p>The new array contains all of the element of <code>array1</code> followed
      * by all of the elements <code>array2</code>. When an array is returned, it is always
@@ -3195,6 +3136,22 @@ public class ArrayUtils {
         System.arraycopy(array1, 0, joinedArray, 0, array1.length);
         System.arraycopy(array2, 0, joinedArray, array1.length, array2.length);
         return joinedArray;
+    }
+
+    /**
+     * <p>Clones an array returning a typecast result and handling
+     * <code>null</code>.</p>
+     * <p>
+     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
+     *
+     * @param array the array to clone, may be <code>null</code>
+     * @return the cloned array, <code>null</code> if <code>null</code> input
+     */
+    public static float[] clone(float[] array) {
+        if (array == null) {
+            return null;
+        }
+        return (float[]) array.clone();
     }
 
     /**
@@ -3227,6 +3184,22 @@ public class ArrayUtils {
     }
 
     /**
+     * <p>Clones an array returning a typecast result and handling
+     * <code>null</code>.</p>
+     * <p>
+     * <p>This method returns <code>null</code> for a <code>null</code> input array.</p>
+     *
+     * @param array the array to clone, may be <code>null</code>
+     * @return the cloned array, <code>null</code> if <code>null</code> input
+     */
+    public static double[] clone(double[] array) {
+        if (array == null) {
+            return null;
+        }
+        return (double[]) array.clone();
+    }
+
+    /**
      * <p>Copies the given array and adds the given element at the end of the new array.</p>
      * <p>
      * <p>The new array contains the same elements of the input
@@ -3254,6 +3227,25 @@ public class ArrayUtils {
         Object[] newArray = (Object[]) copyArrayGrow1(array, type);
         newArray[newArray.length - 1] = element;
         return newArray;
+    }
+
+    /**
+     * Returns a copy of the given array of size 1 greater than the argument.
+     * The last value of the array is left to the default value.
+     *
+     * @param array                 The array to copy, must not be <code>null</code>.
+     * @param newArrayComponentType If <code>array</code> is <code>null</code>, create a
+     *                              size 1 array of this type.
+     * @return A new copy of the array of size 1 greater than the input.
+     */
+    private static Object copyArrayGrow1(Object array, Class newArrayComponentType) {
+        if (array != null) {
+            int arrayLength = Array.getLength(array);
+            Object newArray = Array.newInstance(array.getClass().getComponentType(), arrayLength + 1);
+            System.arraycopy(array, 0, newArray, 0, arrayLength);
+            return newArray;
+        }
+        return Array.newInstance(newArrayComponentType, 1);
     }
 
     /**
@@ -3473,25 +3465,6 @@ public class ArrayUtils {
     }
 
     /**
-     * Returns a copy of the given array of size 1 greater than the argument.
-     * The last value of the array is left to the default value.
-     *
-     * @param array                 The array to copy, must not be <code>null</code>.
-     * @param newArrayComponentType If <code>array</code> is <code>null</code>, create a
-     *                              size 1 array of this type.
-     * @return A new copy of the array of size 1 greater than the input.
-     */
-    private static Object copyArrayGrow1(Object array, Class newArrayComponentType) {
-        if (array != null) {
-            int arrayLength = Array.getLength(array);
-            Object newArray = Array.newInstance(array.getClass().getComponentType(), arrayLength + 1);
-            System.arraycopy(array, 0, newArray, 0, arrayLength);
-            return newArray;
-        }
-        return Array.newInstance(newArrayComponentType, 1);
-    }
-
-    /**
      * <p>Inserts the specified element at the specified position in the array.
      * Shifts the element currently at that position (if any) and any subsequent
      * elements to the right (adds one to their indices).</p>
@@ -3529,6 +3502,39 @@ public class ArrayUtils {
             return new Object[]{null};
         }
         return (Object[]) add(array, index, element, clss);
+    }
+
+    /**
+     * Underlying implementation of add(array, index, element) methods.
+     * The last parameter is the class, which may not equal element.getClass
+     * for primitives.
+     *
+     * @param array   the array to add the element to, may be <code>null</code>
+     * @param index   the position of the new object
+     * @param element the object to add
+     * @param clss    the type of the element being added
+     * @return A new array containing the existing elements and the new element
+     */
+    private static Object add(Object array, int index, Object element, Class clss) {
+        if (array == null) {
+            if (index != 0) {
+                throw new IndexOutOfBoundsException("Index: " + index + ", Length: 0");
+            }
+            Object joinedArray = Array.newInstance(clss, 1);
+            Array.set(joinedArray, 0, element);
+            return joinedArray;
+        }
+        int length = Array.getLength(array);
+        if (index > length || index < 0) {
+            throw new IndexOutOfBoundsException("Index: " + index + ", Length: " + length);
+        }
+        Object result = Array.newInstance(clss, length + 1);
+        System.arraycopy(array, 0, result, 0, index);
+        Array.set(result, index, element);
+        if (index < length) {
+            System.arraycopy(array, index, result, index + 1, length - index);
+        }
+        return result;
     }
 
     /**
@@ -3591,7 +3597,7 @@ public class ArrayUtils {
      *                                   (index < 0 || index > array.length).
      */
     public static char[] add(char[] array, int index, char element) {
-        return (char[]) add(array, index, new Character(element), Character.TYPE);
+        return (char[]) add(array, index, Character.valueOf(element), Character.TYPE);
     }
 
     /**
@@ -3622,7 +3628,7 @@ public class ArrayUtils {
      *                                   (index < 0 || index > array.length).
      */
     public static byte[] add(byte[] array, int index, byte element) {
-        return (byte[]) add(array, index, new Byte(element), Byte.TYPE);
+        return (byte[]) add(array, index, Byte.valueOf(element), Byte.TYPE);
     }
 
     /**
@@ -3653,7 +3659,7 @@ public class ArrayUtils {
      *                                   (index < 0 || index > array.length).
      */
     public static short[] add(short[] array, int index, short element) {
-        return (short[]) add(array, index, new Short(element), Short.TYPE);
+        return (short[]) add(array, index, element, Short.TYPE);
     }
 
     /**
@@ -3684,7 +3690,7 @@ public class ArrayUtils {
      *                                   (index < 0 || index > array.length).
      */
     public static int[] add(int[] array, int index, int element) {
-        return (int[]) add(array, index, new Integer(element), Integer.TYPE);
+        return (int[]) add(array, index, Integer.valueOf(element), Integer.TYPE);
     }
 
     /**
@@ -3715,7 +3721,7 @@ public class ArrayUtils {
      *                                   (index < 0 || index > array.length).
      */
     public static long[] add(long[] array, int index, long element) {
-        return (long[]) add(array, index, new Long(element), Long.TYPE);
+        return (long[]) add(array, index, Long.valueOf(element), Long.TYPE);
     }
 
     /**
@@ -3746,7 +3752,7 @@ public class ArrayUtils {
      *                                   (index < 0 || index > array.length).
      */
     public static float[] add(float[] array, int index, float element) {
-        return (float[]) add(array, index, new Float(element), Float.TYPE);
+        return (float[]) add(array, index, Float.valueOf(element), Float.TYPE);
     }
 
     /**
@@ -3777,40 +3783,40 @@ public class ArrayUtils {
      *                                   (index < 0 || index > array.length).
      */
     public static double[] add(double[] array, int index, double element) {
-        return (double[]) add(array, index, new Double(element), Double.TYPE);
+        return (double[]) add(array, index, Double.valueOf(element), Double.TYPE);
     }
 
     /**
-     * Underlying implementation of add(array, index, element) methods.
-     * The last parameter is the class, which may not equal element.getClass
-     * for primitives.
+     * <p>Removes the first occurrence of the specified element from the
+     * specified array. All subsequent elements are shifted to the left
+     * (substracts one from their indices). If the array doesn't contains
+     * such an element, no elements are removed from the array.</p>
+     * <p>
+     * <p>This method returns a new array with the same elements of the input
+     * array except the first occurrence of the specified element. The component
+     * type of the returned array is always the same as that of the input
+     * array.</p>
+     * <p>
+     * <pre>
+     * ArrayUtils.removeElement(null, "a")            = null
+     * ArrayUtils.removeElement([], "a")              = []
+     * ArrayUtils.removeElement(["a"], "b")           = ["a"]
+     * ArrayUtils.removeElement(["a", "b"], "a")      = ["b"]
+     * ArrayUtils.removeElement(["a", "b", "a"], "a") = ["b", "a"]
+     * </pre>
      *
-     * @param array   the array to add the element to, may be <code>null</code>
-     * @param index   the position of the new object
-     * @param element the object to add
-     * @param clss    the type of the element being added
-     * @return A new array containing the existing elements and the new element
+     * @param array   the array to remove the element from, may be <code>null</code>
+     * @param element the element to be removed
+     * @return A new array containing the existing elements except the first
+     * occurrence of the specified element.
+     * @since 2.1
      */
-    private static Object add(Object array, int index, Object element, Class clss) {
-        if (array == null) {
-            if (index != 0) {
-                throw new IndexOutOfBoundsException("Index: " + index + ", Length: 0");
-            }
-            Object joinedArray = Array.newInstance(clss, 1);
-            Array.set(joinedArray, 0, element);
-            return joinedArray;
+    public static Object[] removeElement(Object[] array, Object element) {
+        int index = indexOf(array, element);
+        if (index == INDEX_NOT_FOUND) {
+            return clone(array);
         }
-        int length = Array.getLength(array);
-        if (index > length || index < 0) {
-            throw new IndexOutOfBoundsException("Index: " + index + ", Length: " + length);
-        }
-        Object result = Array.newInstance(clss, length + 1);
-        System.arraycopy(array, 0, result, 0, index);
-        Array.set(result, index, element);
-        if (index < length) {
-            System.arraycopy(array, index, result, index + 1, length - index);
-        }
-        return result;
+        return remove(array, index);
     }
 
     /**
@@ -3846,6 +3852,69 @@ public class ArrayUtils {
     }
 
     /**
+     * <p>Removes the element at the specified position from the specified array.
+     * All subsequent elements are shifted to the left (substracts one from
+     * their indices).</p>
+     * <p>
+     * <p>This method returns a new array with the same elements of the input
+     * array except the element on the specified position. The component
+     * type of the returned array is always the same as that of the input
+     * array.</p>
+     * <p>
+     * <p>If the input array is <code>null</code>, an IndexOutOfBoundsException
+     * will be thrown, because in that case no valid index can be specified.</p>
+     *
+     * @param array the array to remove the element from, may not be <code>null</code>
+     * @param index the position of the element to be removed
+     * @return A new array containing the existing elements except the element
+     * at the specified position.
+     * @throws IndexOutOfBoundsException if the index is out of range
+     *                                   (index < 0 || index >= array.length), or if the array is <code>null</code>.
+     * @since 2.1
+     */
+    private static Object remove(Object array, int index) {
+        int length = getLength(array);
+        if (index < 0 || index >= length) {
+            throw new IndexOutOfBoundsException("Index: " + index + ", Length: " + length);
+        }
+
+        Object result = Array.newInstance(array.getClass().getComponentType(), length - 1);
+        System.arraycopy(array, 0, result, 0, index);
+        if (index < length - 1) {
+            System.arraycopy(array, index + 1, result, index, length - index - 1);
+        }
+
+        return result;
+    }
+
+    /**
+     * <p>Returns the length of the specified array.
+     * This method can deal with <code>Object</code> arrays and with primitive arrays.</p>
+     * <p>
+     * <p>If the input array is <code>null</code>, <code>0</code> is returned.</p>
+     * <p>
+     * <pre>
+     * ArrayUtils.getLength(null)            = 0
+     * ArrayUtils.getLength([])              = 0
+     * ArrayUtils.getLength([null])          = 1
+     * ArrayUtils.getLength([true, false])   = 2
+     * ArrayUtils.getLength([1, 2, 3])       = 3
+     * ArrayUtils.getLength(["a", "b", "c"]) = 3
+     * </pre>
+     *
+     * @param array the array to retrieve the length from, may be null
+     * @return The length of the array, or <code>0</code> if the array is <code>null</code>
+     * @throws IllegalArgumentException if the object arguement is not an array.
+     * @since 2.1
+     */
+    public static int getLength(Object array) {
+        if (array == null) {
+            return 0;
+        }
+        return Array.getLength(array);
+    }
+
+    /**
      * <p>Removes the first occurrence of the specified element from the
      * specified array. All subsequent elements are shifted to the left
      * (substracts one from their indices). If the array doesn't contains
@@ -3857,11 +3926,11 @@ public class ArrayUtils {
      * array.</p>
      * <p>
      * <pre>
-     * ArrayUtils.removeElement(null, "a")            = null
-     * ArrayUtils.removeElement([], "a")              = []
-     * ArrayUtils.removeElement(["a"], "b")           = ["a"]
-     * ArrayUtils.removeElement(["a", "b"], "a")      = ["b"]
-     * ArrayUtils.removeElement(["a", "b", "a"], "a") = ["b", "a"]
+     * ArrayUtils.removeElement(null, true)                = null
+     * ArrayUtils.removeElement([], true)                  = []
+     * ArrayUtils.removeElement([true], false)             = [true]
+     * ArrayUtils.removeElement([true, false], false)      = [true]
+     * ArrayUtils.removeElement([true, false, true], true) = [false, true]
      * </pre>
      *
      * @param array   the array to remove the element from, may be <code>null</code>
@@ -3870,7 +3939,7 @@ public class ArrayUtils {
      * occurrence of the specified element.
      * @since 2.1
      */
-    public static Object[] removeElement(Object[] array, Object element) {
+    public static boolean[] removeElement(boolean[] array, boolean element) {
         int index = indexOf(array, element);
         if (index == INDEX_NOT_FOUND) {
             return clone(array);
@@ -3922,11 +3991,11 @@ public class ArrayUtils {
      * array.</p>
      * <p>
      * <pre>
-     * ArrayUtils.removeElement(null, true)                = null
-     * ArrayUtils.removeElement([], true)                  = []
-     * ArrayUtils.removeElement([true], false)             = [true]
-     * ArrayUtils.removeElement([true, false], false)      = [true]
-     * ArrayUtils.removeElement([true, false, true], true) = [false, true]
+     * ArrayUtils.removeElement(null, 1)        = null
+     * ArrayUtils.removeElement([], 1)          = []
+     * ArrayUtils.removeElement([1], 0)         = [1]
+     * ArrayUtils.removeElement([1, 0], 0)      = [1]
+     * ArrayUtils.removeElement([1, 0, 1], 1)   = [0, 1]
      * </pre>
      *
      * @param array   the array to remove the element from, may be <code>null</code>
@@ -3935,7 +4004,7 @@ public class ArrayUtils {
      * occurrence of the specified element.
      * @since 2.1
      */
-    public static boolean[] removeElement(boolean[] array, boolean element) {
+    public static byte[] removeElement(byte[] array, byte element) {
         int index = indexOf(array, element);
         if (index == INDEX_NOT_FOUND) {
             return clone(array);
@@ -3987,11 +4056,11 @@ public class ArrayUtils {
      * array.</p>
      * <p>
      * <pre>
-     * ArrayUtils.removeElement(null, 1)        = null
-     * ArrayUtils.removeElement([], 1)          = []
-     * ArrayUtils.removeElement([1], 0)         = [1]
-     * ArrayUtils.removeElement([1, 0], 0)      = [1]
-     * ArrayUtils.removeElement([1, 0, 1], 1)   = [0, 1]
+     * ArrayUtils.removeElement(null, 'a')            = null
+     * ArrayUtils.removeElement([], 'a')              = []
+     * ArrayUtils.removeElement(['a'], 'b')           = ['a']
+     * ArrayUtils.removeElement(['a', 'b'], 'a')      = ['b']
+     * ArrayUtils.removeElement(['a', 'b', 'a'], 'a') = ['b', 'a']
      * </pre>
      *
      * @param array   the array to remove the element from, may be <code>null</code>
@@ -4000,7 +4069,7 @@ public class ArrayUtils {
      * occurrence of the specified element.
      * @since 2.1
      */
-    public static byte[] removeElement(byte[] array, byte element) {
+    public static char[] removeElement(char[] array, char element) {
         int index = indexOf(array, element);
         if (index == INDEX_NOT_FOUND) {
             return clone(array);
@@ -4052,11 +4121,11 @@ public class ArrayUtils {
      * array.</p>
      * <p>
      * <pre>
-     * ArrayUtils.removeElement(null, 'a')            = null
-     * ArrayUtils.removeElement([], 'a')              = []
-     * ArrayUtils.removeElement(['a'], 'b')           = ['a']
-     * ArrayUtils.removeElement(['a', 'b'], 'a')      = ['b']
-     * ArrayUtils.removeElement(['a', 'b', 'a'], 'a') = ['b', 'a']
+     * ArrayUtils.removeElement(null, 1.1)            = null
+     * ArrayUtils.removeElement([], 1.1)              = []
+     * ArrayUtils.removeElement([1.1], 1.2)           = [1.1]
+     * ArrayUtils.removeElement([1.1, 2.3], 1.1)      = [2.3]
+     * ArrayUtils.removeElement([1.1, 2.3, 1.1], 1.1) = [2.3, 1.1]
      * </pre>
      *
      * @param array   the array to remove the element from, may be <code>null</code>
@@ -4065,7 +4134,7 @@ public class ArrayUtils {
      * occurrence of the specified element.
      * @since 2.1
      */
-    public static char[] removeElement(char[] array, char element) {
+    public static double[] removeElement(double[] array, double element) {
         int index = indexOf(array, element);
         if (index == INDEX_NOT_FOUND) {
             return clone(array);
@@ -4130,7 +4199,7 @@ public class ArrayUtils {
      * occurrence of the specified element.
      * @since 2.1
      */
-    public static double[] removeElement(double[] array, double element) {
+    public static float[] removeElement(float[] array, float element) {
         int index = indexOf(array, element);
         if (index == INDEX_NOT_FOUND) {
             return clone(array);
@@ -4182,11 +4251,11 @@ public class ArrayUtils {
      * array.</p>
      * <p>
      * <pre>
-     * ArrayUtils.removeElement(null, 1.1)            = null
-     * ArrayUtils.removeElement([], 1.1)              = []
-     * ArrayUtils.removeElement([1.1], 1.2)           = [1.1]
-     * ArrayUtils.removeElement([1.1, 2.3], 1.1)      = [2.3]
-     * ArrayUtils.removeElement([1.1, 2.3, 1.1], 1.1) = [2.3, 1.1]
+     * ArrayUtils.removeElement(null, 1)      = null
+     * ArrayUtils.removeElement([], 1)        = []
+     * ArrayUtils.removeElement([1], 2)       = [1]
+     * ArrayUtils.removeElement([1, 3], 1)    = [3]
+     * ArrayUtils.removeElement([1, 3, 1], 1) = [3, 1]
      * </pre>
      *
      * @param array   the array to remove the element from, may be <code>null</code>
@@ -4195,7 +4264,7 @@ public class ArrayUtils {
      * occurrence of the specified element.
      * @since 2.1
      */
-    public static float[] removeElement(float[] array, float element) {
+    public static int[] removeElement(int[] array, int element) {
         int index = indexOf(array, element);
         if (index == INDEX_NOT_FOUND) {
             return clone(array);
@@ -4260,7 +4329,7 @@ public class ArrayUtils {
      * occurrence of the specified element.
      * @since 2.1
      */
-    public static int[] removeElement(int[] array, int element) {
+    public static long[] removeElement(long[] array, long element) {
         int index = indexOf(array, element);
         if (index == INDEX_NOT_FOUND) {
             return clone(array);
@@ -4325,7 +4394,7 @@ public class ArrayUtils {
      * occurrence of the specified element.
      * @since 2.1
      */
-    public static long[] removeElement(long[] array, long element) {
+    public static short[] removeElement(short[] array, short element) {
         int index = indexOf(array, element);
         if (index == INDEX_NOT_FOUND) {
             return clone(array);
@@ -4363,75 +4432,6 @@ public class ArrayUtils {
      */
     public static short[] remove(short[] array, int index) {
         return (short[]) remove((Object) array, index);
-    }
-
-    /**
-     * <p>Removes the first occurrence of the specified element from the
-     * specified array. All subsequent elements are shifted to the left
-     * (substracts one from their indices). If the array doesn't contains
-     * such an element, no elements are removed from the array.</p>
-     * <p>
-     * <p>This method returns a new array with the same elements of the input
-     * array except the first occurrence of the specified element. The component
-     * type of the returned array is always the same as that of the input
-     * array.</p>
-     * <p>
-     * <pre>
-     * ArrayUtils.removeElement(null, 1)      = null
-     * ArrayUtils.removeElement([], 1)        = []
-     * ArrayUtils.removeElement([1], 2)       = [1]
-     * ArrayUtils.removeElement([1, 3], 1)    = [3]
-     * ArrayUtils.removeElement([1, 3, 1], 1) = [3, 1]
-     * </pre>
-     *
-     * @param array   the array to remove the element from, may be <code>null</code>
-     * @param element the element to be removed
-     * @return A new array containing the existing elements except the first
-     * occurrence of the specified element.
-     * @since 2.1
-     */
-    public static short[] removeElement(short[] array, short element) {
-        int index = indexOf(array, element);
-        if (index == INDEX_NOT_FOUND) {
-            return clone(array);
-        }
-        return remove(array, index);
-    }
-
-    /**
-     * <p>Removes the element at the specified position from the specified array.
-     * All subsequent elements are shifted to the left (substracts one from
-     * their indices).</p>
-     * <p>
-     * <p>This method returns a new array with the same elements of the input
-     * array except the element on the specified position. The component
-     * type of the returned array is always the same as that of the input
-     * array.</p>
-     * <p>
-     * <p>If the input array is <code>null</code>, an IndexOutOfBoundsException
-     * will be thrown, because in that case no valid index can be specified.</p>
-     *
-     * @param array the array to remove the element from, may not be <code>null</code>
-     * @param index the position of the element to be removed
-     * @return A new array containing the existing elements except the element
-     * at the specified position.
-     * @throws IndexOutOfBoundsException if the index is out of range
-     *                                   (index < 0 || index >= array.length), or if the array is <code>null</code>.
-     * @since 2.1
-     */
-    private static Object remove(Object array, int index) {
-        int length = getLength(array);
-        if (index < 0 || index >= length) {
-            throw new IndexOutOfBoundsException("Index: " + index + ", Length: " + length);
-        }
-
-        Object result = Array.newInstance(array.getClass().getComponentType(), length - 1);
-        System.arraycopy(array, 0, result, 0, index);
-        if (index < length - 1) {
-            System.arraycopy(array, index + 1, result, index, length - index - 1);
-        }
-
-        return result;
     }
 
 }
